[package]
name = "moor-daemon"
version = "0.9.0-alpha"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The actual moor binary that runs as an RPC-accessible daemon that various frontends can connect to."

[package.metadata.deb]
depends = "$auto, systemd, openssl"
extended-description = "Daemon for the Moor virtual machine. This is the main process that runs the Moor VM and provides an RPC interface for clients to connect to."
section = "net"
license-file = ["../../LICENSE", "0"]
priority = "optional"
assets = [
    ["target/release/moor-daemon", "/usr/bin/moor-daemon", "755"],
    [
        "debian/moor-daemon.service",
        "/lib/systemd/system/moor-daemon.service",
        "644",
    ],
    ["debian/moor-daemon-config.json", "/etc/moor/daemon-config.json", "644"],
]
maintainer-scripts = "debian/scripts"
systemd-units = { enable = false }

[lib]
name = "bincommon"
path = "src/lib.rs"

[[bin]]
name = "moor-daemon"
path = "src/main.rs"

[dependencies]
moor-common = { path = "../common" }
moor-db = { path = "../db" }
moor-kernel = { path = "../kernel" }
moor-objdef = { path = "../objdef" }
moor-textdump = { path = "../textdump" }
moor-var = { path = "../var" }
rpc-common = { path = "../rpc/rpc-common" }

## Command line arguments parsing & configuration generally.
clap.workspace = true
clap_derive.workspace = true

# General.
ahash.workspace = true
bincode.workspace = true
byteview.workspace = true
color-eyre.workspace = true
eyre.workspace = true
fjall.workspace = true
flume = "0.11"
gdt-cpus.workspace = true
minstant.workspace = true
oneshot.workspace = true
papaya.workspace = true
semver.workspace = true
signal-hook.workspace = true
tempfile.workspace = true

## Logging & tracing
tracing.workspace = true
tracing-subscriber.workspace = true

## RPC daemon support
serde_json.workspace = true
uuid.workspace = true
zmq.workspace = true

# Auth/Auth
rusty_paseto.workspace = true

# Memory management
mimalloc.workspace = true
