[package]
name = "moor-daemon"
version = "1.0.0-beta5"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The actual moor binary that runs as an RPC-accessible daemon that various frontends can connect to."

[package.metadata.deb]
depends = "$auto, systemd, openssl"
extended-description = "Daemon for the Moor virtual machine. This is the main process that runs the Moor VM and provides an RPC interface for clients to connect to."
section = "net"
license-file = ["../../LICENSE", "0"]
priority = "optional"
assets = [
    ["target/release/moor-daemon", "/usr/bin/moor-daemon", "755"],
    [
        "debian/moor-daemon.service",
        "/lib/systemd/system/moor-daemon.service",
        "644",
    ],
    ["debian/moor-daemon-config.yaml", "/etc/moor/daemon-config.yaml", "644"],
    [
        "../../cores/lambda-moor/**/*",
        "/usr/share/moor/cores/lambda-moor/",
        "644",
    ],
]
maintainer-scripts = "debian/scripts"
systemd-units = { enable = false }

[[bin]]
name = "moor-daemon"
path = "src/main.rs"

[dependencies]
# Internal Dependencies
moor-common = { path = "../common" }
moor-compiler = { path = "../compiler" }
moor-db = { path = "../db" }
moor-kernel = { path = "../kernel" }
moor-objdef = { path = "../objdef" }
moor-schema = { path = "../schema" }
moor-textdump = { path = "../textdump" }
moor-var = { path = "../var" }
rpc-common = { path = "../rpc/rpc-common" }

# Core Runtime & System
gdt-cpus.workspace = true
mimalloc.workspace = true
signal-hook.workspace = true

# Command Line & Configuration
clap.workspace = true
clap_derive.workspace = true
figment.workspace = true
planus.workspace = true
serde.workspace = true
serde_json.workspace = true

# Database & Persistence
fjall.workspace = true
fs2.workspace = true
zerocopy.workspace = true

# Networking & Communication
zmq.workspace = true

# Async Runtime & Concurrency
flume.workspace = true
oneshot.workspace = true
papaya.workspace = true

# Authentication & Security
age.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rusty_paseto.workspace = true
sha2.workspace = true

# Error Handling & Logging
color-eyre.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities & Helpers
ahash.workspace = true
byteview.workspace = true
chrono.workspace = true
lazy_static.workspace = true
minstant.workspace = true
once_cell.workspace = true
rand.workspace = true
semver.workspace = true
uuid.workspace = true

# Testing & Development
tempfile.workspace = true

[features]
trace_events = ["moor-kernel/trace_events"]
