[package]
name = "moor-db-wiredtiger"
description = "WiredTiger DB layer/bindings"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
libc.workspace = true

[dependencies]
moor-values = { path = "../values" }
moor-db = { path = "../db" }

bytes.workspace = true
daumtils.workspace = true
strum.workspace = true
tempfile.workspace = true
tracing.workspace = true
uuid.workspace = true
