[package]
name = "moor-db-wiredtiger"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WiredTiger DB layer/bindings"

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
libc.workspace = true

[dependencies]
moor-db = { path = "../db" }
moor-values = { path = "../values" }

bytes.workspace = true
daumtils.workspace = true
strum.workspace = true
tempfile.workspace = true
tracing.workspace = true
uuid.workspace = true
