[package]
name = "moor-db"
version = "1.1.0-dev"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Interfaces for describing the worldstate of a moor database"

[[bench]]
name = "tx_worldstate_benches"
harness = false

[[bench]]
name = "verb_cache_benches"
harness = false

[[bench]]
name = "prop_cache_benches"
harness = false

[[bench]]
name = "tx_relation_benches"
harness = false

[dev-dependencies]
edn-format.workspace = true
eyre.workspace = true
micromeasure.workspace = true
shuttle.workspace = true
tempfile.workspace = true

[dependencies]
# Internal Dependencies
moor-common = { path = "../common" }
moor-schema = { path = "../schema" }
moor-var = { path = "../var" }

# Core Runtime & System

# Serialization & Data Formats
planus.workspace = true
serde.workspace = true

# Database & Persistence
fjall.workspace = true

# Async Runtime & Concurrency
arc-swap.workspace = true
flume.workspace = true
oneshot.workspace = true
parking_lot.workspace = true

# Collections & Data Structures
ahash.workspace = true
imbl.workspace = true

# Error Handling & Logging
thiserror.workspace = true
tracing.workspace = true

# Utilities & Helpers
byteview.workspace = true
paste.workspace = true
rand.workspace = true
semver.workspace = true
uuid.workspace = true
zerocopy.workspace = true

# Testing & Development
tempfile.workspace = true

[features]
relbox = []
