[package]
name = "moor-moot"
version = "0.1.0"
description = "Execute MOO interaction tests described in simple text files."
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
eyre.workspace = true
pretty_assertions.workspace = true

moor-values = { path = "../values" }
