[package]
name = "moor-node-host"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Embedding the moor system in a node.js addon"

exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
moor-values = { path = "../common" }
rpc-async-client = { path = "../rpc/rpc-async-client" }
rpc-common = { path = "../rpc/rpc-common" }

# General.
once_cell = "1"
tracing.workspace = true
tracing-subscriber.workspace = true

## Asynchronous transaction processing & networking
tmq.workspace = true
tokio.workspace = true

## Neon
neon = "1.1.0-alpha.1"
uuid = { version = "1.11.0", features = ["v4"] }
