[package]
name = "moor-objdef"
version = "0.9.0-alpha"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
resolver = "2"
rust-version.workspace = true
description = "New style import/export of object definitions in text files in directories for mooR."

[dev-dependencies]
moor-db = { path = "../db" }
moor-textdump = { path = "../textdump" }
tempfile.workspace = true

[dependencies]
## Own
moor-common = { path = "../common" }
moor-compiler = { path = "../compiler" }
moor-var = { path = "../var" }

## General usefulness
semver.workspace = true

## Logging & tracing
tracing.workspace = true

## Error declaration/ handling
thiserror.workspace = true
