[dependencies]
# Internal Dependencies
moor-common = {path = "../common"}
moor-compiler = {path = "../compiler"}
moor-var = {path = "../var"}
# Utilities & Helpers
semver.workspace = true
# Error Handling & Logging
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
moor-db = {path = "../db"}
moor-textdump = {path = "../textdump"}
tempfile.workspace = true

[package]
description = "New style import/export of object definitions in text files in directories for mooR."
name = "moor-objdef"
resolver = "2"
version = "0.9.0-alpha"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
