[package]
name = "moor-objdef"
version = "1.0.0-beta7"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
resolver = "2"
rust-version.workspace = true
description = "New style import/export of object definitions in text files in directories for mooR."

[dev-dependencies]
moor-db = { path = "../db" }
moor-textdump = { path = "../textdump" }
tempfile.workspace = true

[dependencies]
# Internal Dependencies
moor-common = { path = "../common" }
moor-compiler = { path = "../compiler" }
moor-var = { path = "../var" }

# Error Handling & Logging
thiserror.workspace = true
tracing.workspace = true

# Utilities & Helpers
semver.workspace = true
uuid.workspace = true
