[package]
name = "rpc-async-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Own
rpc-common = { path = "../rpc-common" }

bincode.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tmq.workspace = true
tracing.workspace = true
uuid.workspace = true
